--- a/src/ui/param.ui
+++ b/src/ui/param.ui
@@ -40,6 +40,12 @@
         </item>
         <item>
          <widget class="QLabel" name="label_3">
+          <property name="font">
+           <font>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
           <property name="text">
            <string>Save to:</string>
           </property>
@@ -104,12 +110,18 @@
          <bool>false</bool>
         </attribute>
         <attribute name="verticalHeaderVisible">
-         <bool>false</bool>
+         <bool>true</bool>
         </attribute>
        </widget>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="text">
          <string>Parameter Bank</string>
         </property>
@@ -145,7 +157,40 @@
       <string>Read</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0">
+      <item row="1" column="2">
+       <widget class="QPushButton" name="saveFileButton">
+        <property name="text">
+         <string>Save to File</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>res/content-save.png</normaloff>res/content-save.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="refreshButton">
+        <property name="text">
+         <string>Read</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>res/refresh.png</normaloff>res/refresh.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="editButton">
+        <property name="text">
+         <string>Edit</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>res/arrow-collapse-left.png</normaloff>res/arrow-collapse-left.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="3">
        <widget class="QTableView" name="paramsTable">
         <property name="font">
          <font>
@@ -171,22 +216,11 @@
          <bool>false</bool>
         </attribute>
         <attribute name="verticalHeaderVisible">
-         <bool>false</bool>
+         <bool>true</bool>
         </attribute>
         <attribute name="verticalHeaderStretchLastSection">
          <bool>false</bool>
         </attribute>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="refreshButton">
-        <property name="text">
-         <string>Read</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>res/refresh.png</normaloff>res/refresh.png</iconset>
-        </property>
        </widget>
       </item>
      </layout>
