--- a/src/ui/param.ui
+++ b/src/ui/param.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0" columnstretch="4,3,0">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0" columnstretch="4,3">
    <item row="0" column="0" rowspan="2">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -151,7 +151,7 @@
      </layout>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="0" column="1" rowspan="2">
     <widget class="QGroupBox" name="readGroupbox">
      <property name="title">
       <string>RAM</string>
@@ -162,20 +162,12 @@
         <property name="text">
          <string>Read from RAM</string>
         </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>res/refresh.png</normaloff>res/refresh.png</iconset>
-        </property>
        </widget>
       </item>
       <item row="2" column="1" colspan="2">
        <widget class="QPushButton" name="saveFileButton">
         <property name="text">
          <string>Save to File</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>res/content-save.png</normaloff>res/content-save.png</iconset>
         </property>
        </widget>
       </item>
@@ -216,10 +208,6 @@
        <widget class="QPushButton" name="editButton">
         <property name="text">
          <string>Edit</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>res/arrow-collapse-left.png</normaloff>res/arrow-collapse-left.png</iconset>
         </property>
        </widget>
       </item>
