--- a/src/ui/basic.ui
+++ b/src/ui/basic.ui
@@ -74,6 +74,9 @@
         <property name="decimals">
          <number>4</number>
         </property>
+        <property name="maximum">
+         <double>100.989999999999995</double>
+        </property>
        </widget>
       </item>
       <item row="3" column="0">
@@ -326,13 +329,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
-       <widget class="QLabel" name="armVerLabel">
-        <property name="text">
-         <string>Unknown</string>
-        </property>
-       </widget>
-      </item>
       <item row="3" column="1" colspan="3">
        <layout class="QHBoxLayout" name="addressLayout">
         <item>
@@ -349,6 +345,39 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item row="0" column="3">
+       <widget class="QLabel" name="armVerLabel">
+        <property name="text">
+         <string>Unknown</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLabel" name="label_14">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Refresh Rate:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="3">
+       <widget class="QDoubleSpinBox" name="refreshBox">
+        <property name="suffix">
+         <string> Hz</string>
+        </property>
+        <property name="decimals">
+         <number>1</number>
+        </property>
+        <property name="value">
+         <double>1.000000000000000</double>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
