--- a/src/ui/main.ui
+++ b/src/ui/main.ui
@@ -143,12 +143,24 @@
      <height>20</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+    <addaction name="actionParams"/>
+   </widget>
+   <addaction name="menuEdit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="sizeGripEnabled">
     <bool>false</bool>
    </property>
   </widget>
+  <action name="actionParams">
+   <property name="text">
+    <string>Parameter Banks</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections>
