--- a/src/ui/basic.ui
+++ b/src/ui/basic.ui
@@ -362,7 +362,7 @@
            </widget>
           </item>
           <item row="4" column="0" colspan="2">
-           <widget class="QPushButton" name="pushButton_3">
+           <widget class="QPushButton" name="setpointButton">
             <property name="text">
              <string>Apply</string>
             </property>
