--- a/src/pemi/ui/main.ui
+++ b/src/pemi/ui/main.ui
@@ -23,8 +23,11 @@
    <property name="enabled">
     <bool>true</bool>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="1,90,1">
+    <item row="6" column="1">
+     <layout class="QVBoxLayout" name="tabLayout"/>
+    </item>
+    <item row="3" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="addressLabel">
@@ -44,7 +47,7 @@
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
+    <item row="1" column="1">
      <layout class="QHBoxLayout" name="connectLayout">
       <item>
        <widget class="QLabel" name="ipLabel">
@@ -115,22 +118,45 @@
       </item>
      </layout>
     </item>
-    <item row="6" column="0">
-     <layout class="QVBoxLayout" name="tabLayout"/>
+    <item row="2" column="1">
+     <widget class="Line" name="line_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
     </item>
-    <item row="5" column="0">
+    <item row="5" column="1">
      <widget class="Line" name="line">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="Line" name="line_2">
+    <item row="3" column="0">
+     <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-     </widget>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="3" column="2">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
