--- a/src/pemi/ui/param.ui
+++ b/src/pemi/ui/param.ui
@@ -58,7 +58,7 @@
        </widget>
       </item>
       <item row="1" column="0" colspan="4">
-       <widget class="QTableView" name="paramBankTable">
+       <widget class="QTableView" name="paramEditTable">
         <property name="font">
          <font>
           <pointsize>7</pointsize>
